<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context="com.ajitsinghkamal.ichallenge.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/main_relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <TextView
            android:id="@+id/main_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_titleText"
            android:textSize="22sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/main_edit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/main_titleDefault"
            android:inputType="text"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccentSec"
            android:textColorHint="@color/colorAccentSec"
            android:textColorHighlight="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:maxLines="1"
            android:maxLength="25"/>

        <TextView
            android:id="@+id/main_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_selectorText"
            android:textSize="22sp"
            android:layout_below="@+id/main_edit1"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/main_relative2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_relative1"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true">



        <TextView
           android:id="@+id/main_text3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/main_duration"
            android:textStyle="bold"
            android:textSize="35sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/main_text3"
            android:layout_toEndOf="@+id/main_text3"
            android:text="@string/main_days"
            android:textSize="32sp"
            android:textColor="@color/colorAccentSec"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_relative3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/main_relative2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/main_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose your path"
            android:textSize="22sp"/>

        <Switch
            android:id="@+id/main_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_text4"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"/>

        <TextView
            android:id="@+id/main_switchLazy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/main_switch"
            android:layout_toStartOf="@id/main_switch"
            android:layout_alignBottom="@id/main_switch"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:text="@string/main_switch_lazy"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/main_switchStrict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/main_switch"
            android:layout_toEndOf="@id/main_switch"
            android:layout_alignBottom="@id/main_switch"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:text="@string/main_switch_strict"
            android:textSize="25sp"
            android:textStyle="bold"
            />

    </RelativeLayout>

     <Button
        android:id="@+id/main_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="create challenge"
        android:textSize="20sp"
        android:padding="20dp"
        android:backgroundTint="@color/colorPrimary"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="65dp"

         android:layout_centerHorizontal="true" />




</RelativeLayout>

